--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">Book Listing</string>
 
     <string name="empty_text">No books were found</string>
+    <string name="no_connection">No connection</string>
+    <string name="thumbnail_description">Book\'s thumbnail</string>
 </resources>
